# sd_blender_excercises

./: .gitignore  README.md  context.md  pyproject.toml
dev_tasks/001_pipeline_dev/: POR.md
dev_tasks/002_pdg_refactor/: POR.md
dev_tasks/003_idempotent_refactor/: POR.md
source/: Onboarding for 3D Data Engineering 30261cdcd19680f7b8f8f52cbb8d6ba8.md
src/ex_1__mini_inspector/: Plan_of_Record.md  README.md  __init__.py  mini_inspector.py
src/ex_2__thumbnail_renderer/: Plan_of_Record.md  __init__.py  render_task.py
src/ex_3__proc_camera/: Plan_of_Record.md  proc_camera.py
src/ex_4__batch_validator/: Plan_of_Record.md
src/ex_5__hpc_pipeline/: Plan_of_Record.md
src/lib/: __init__.py  naming.py  pipeline.py  scheduler.py  test_pipeline.py  work_item.py
src/lib/bpy/: __init__.py  animation.py  camera.py  geometry_nodes.py  io.py  mesh.py  render.py  scene.py  spatial.py
src/lib/pipeline_steps/: __init__.py  analysis.py  blender_step.py  camera.py  io.py  lighting.py  render.py  reporting.py  scene.py  volume.py
