[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-exercises"
version = "1.0.0"
requires-python = ">=3.11"
description = "Composable pipeline framework for 3D data engineering exercises"
dependencies = [
    "bpy",
]

[tool.setuptools.packages.find]
where = ["src"]
